<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entryExpenditure"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <TextView  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/expenditure_title"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/foreground"/>
    <TableLayout
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:stretchColumns="*">
      <TableRow>
        <TextView
          android:text="@string/item_label"
          android:textColor="@color/foreground" />
        <Spinner
          android:id="@+id/expenditureType"
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:entries="@array/expenditureType"/>
        <TextView
          android:text="@string/note_label"
          android:textColor="@color/foreground" />
        <EditText
          android:id="@+id/expenditureNote"
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
        />
      </TableRow>
      <TableRow>
        <TextView
          android:text="@string/expenditure_label"
          android:textColor="@color/foreground" />
        <EditText
          android:id="@+id/expenditure"
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content" 
        />
        <TextView
          android:text="@string/yen_label"
          android:textColor="@color/foreground"
          android:layout_gravity="bottom" />
      </TableRow>
    </TableLayout>
    
</LinearLayout>